<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hearc.stevevisinand.lazyboy.Activities.ConfigurationActivity"
    >



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/configurationActivity_Events"
            android:textAlignment="center"
            android:id="@+id/textViewEvents"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            />



        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewEvents"
            android:layout_below="@+id/textViewEvents"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/configurationActivity_AddEventBtn"
            android:id="@+id/btnAddEvent"
            android:nestedScrollingEnabled="true"
            android:layout_weight="1"
            android:layout_marginTop="10dp"

            android:drawableTop="@drawable/ic_control_point_black_24dp"
            />



        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listViewEvents"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/configurationActivity_Actions"
            android:textAlignment="center"
            android:id="@+id/textViewActions"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:nestedScrollingEnabled="true"
            android:layout_weight="1"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp" />


        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewActions"
            android:layout_below="@+id/textViewActions"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/configurationActivity_AddActionBtn"
            android:id="@+id/btnAddAction"
            android:layout_weight="1"
            android:layout_marginTop="10dp"

            android:drawableTop="@drawable/ic_control_point_black_24dp"/>


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/configurationActivity_ConfirmBtn"
            android:id="@+id/btnConfirm"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:layout_marginTop="40dp"
            android:drawableTop="@drawable/ic_check_black_24dp"/>


    </LinearLayout>

</ScrollView>
